# CHIP8-Emulator

./: CMakeLists.txt  LICENSE  README.md
include/: cpu.h  keyboard.h  window.h
src/: Makefile  cpu.cpp  cpu.h  fontset.h  keyboard.cpp  main.cpp  window.cpp
